fixed misalignment

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -355,7 +355,7 @@ grid-column: 1;
     height: 650px;
     background-color: #2959C0;
     display: grid;
-    grid-template-columns: repeat(12, 1fr);
+    /* grid-template-columns: repeat(12, 1fr); */
     grid-row: auto;
     margin: auto auto;
 }
